# BiologgingBase

./: LICENSE  README.md  pyproject.toml
src/BiologBase/: biologgingBase.py  lesserCalculation.py
src/BiologBase_argrod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_dtFormat.py
